--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   
   <div class="container">
-  <header class="primary-header group">
+  <header class="primary-header container group">
   <h1 class="logo">
     <a href="index.html">Styles <br> Conference</a>
   </h1>
