--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
 </head>
 <body>
       
-        <header class="primary-header group">
+        <header class="primary-header container group">
             <h1 class="logo">
               <a href="index.html">Styles <br> Conference</a>
             </h1>
